# WaterMeterApp

./: README.md  build.gradle  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/java/com/example/watermeterapp/: GetReadings.kt  (+8 more)
app/src/main/res/drawable/: button_round.xml  textview_background.xml
app/src/main/res/layout/: activity_get_readings.xml  activity_home_page.xml  activity_home_page1.xml  activity_main.xml  activity_view_record_list.xml  activity_view_record_main.xml  app_bar_home_page1.xml  content_home_page1.xml  listview_meterreadinglist_white.xml  nav_header_home_page1.xml  unitlayoutdesign.xml
app/src/main/res/menu/: activity_home_page1_drawer.xml
app/src/main/res/mipmap-anydpi-v26/: ic_launcher.xml
app/src/main/res/mipmap-hdpi/: Thumbs.db
app/src/main/res/mipmap-mdpi/: Thumbs.db
app/src/main/res/mipmap-xhdpi/: Thumbs.db
app/src/main/res/mipmap-xxhdpi/: Thumbs.db
app/src/main/res/mipmap-xxxhdpi/: Thumbs.db
app/src/main/res/values/: colors.xml  strings.xml
app/src/main/res/xml/: file_paths.xml  file_provider_paths.xml
gradle/wrapper/: gradle-wrapper.properties
metercamera/: build.gradle  google-services.json
metercamera/src/main/: AndroidManifest.xml
metercamera/src/main/cpp/: CMakeLists.txt  ImageAnalysis.cpp  ImageAnalysis.h  ImageAnalysisHelper.cpp  ImageAnalysisHelper.h  image-analysis.cpp
metercamera/src/main/res/layout/: activity_image_analysis.xml  activity_main.xml
metercamera/src/main/res/values/: strings.xml
metercamera/src/main/res/xml/: file_paths.xml
opencv/: build.gradle
(+13 files in other folders)
